# nonebot-plugin-qqgroup-filedownloader

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_qqgroup_filedownloader/: __init__.py  config.py
